--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title>Google</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script type="text/javascript" src='assets/js/script.js'></script>
+	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
+	<script asinc type="text/javascript" src='assets/js/script.js'></script>
+	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
  <header>
@@ -17,8 +19,8 @@
  		</ul>
  	</nav>
  </header>
-
  <!-- spisok -->
+ <div id = 'app'></div>
  <div class="spisok ">
  	<ul>
  		<li>
@@ -130,6 +132,7 @@
  	</ul>
  	<a href="#">Другие сервисы Google</a>
  </div>
+ <div class="spis_pointer"></div>
 
 
  <div class="main">
