--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
  		</ul>
  	</nav>
  </header>
+
  <!-- spisok -->
  <div id = 'app'></div>
  <div class="spisok ">
@@ -98,6 +99,7 @@
  	</ul>
  	<a href="#" id="more">Ещё</a>
  	<hr>
+ 	<!-- open part -->
  	<ul id = 'morespisokelem'>
  		<li>
 	 		<a href="#">
@@ -124,17 +126,21 @@
 			</a>
  		</li>
  		<li>
- 			<a href="#">
+ 			<a href="#" id='li_earth'>
 	 			<span style="background-position:0 -2139px"></span>
-	 			<span>Земля</span>
+	 			<span>Планета Зе..</span>
 			</a>
  		</li>
  	</ul>
  	<a href="#">Другие сервисы Google</a>
+ 	<!-- end open part -->
  </div>
  <div class="spis_pointer"></div>
 
+<!-- end spisok -->
 
+
+<!-- main -->
  <div class="main">
  	<img src="assets/img/googlelogo.png" alt='Google' class="logo">
  	<div class="sbibod">
@@ -142,7 +148,7 @@
  			<input type="text"></input>
  		</div>
  		<div class="enters">
- 			<a href="#" ><img src="http://www.gstatic.com/inputtools/images/tia.png" class="claviatur"></a>
+ 			<a href="#" ><img src="http://www.gstatic.com/inputtools/images/tia.png" class="keybord"></a>
  			<a href="#" ><img src="assets/img/microphone.png" class="microphone"></a>
  		</div>
  	</div>
@@ -154,6 +160,8 @@
  		Сервисы Google доступны на разных языках: <a href="#">Беларуская</a>
  	</div>
  </div>
+<!-- end main -->
+
  <div class="footer">
  	<div>
  		<span>Беларусь</span>
